<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="64dp">

    <EditText
        android:id="@+id/bulbNumberEt"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/x" />
    <EditText
        android:id="@+id/bulbWattsEt"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watts"/>

    <Spinner
        android:id="@+id/bulbSpinner"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/addBulbRowButton"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>