<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="@string/new_project"
        android:id="@+id/textView"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/titleEditText"
        android:hint="@string/project_title"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <EditText
        android:id="@+id/descEditText"
        android:hint="@string/project_desc"
        android:layout_width="0dp"
        android:layout_height="64dp"

        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/projAcceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/descEditText"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/projCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/projAcceptButton"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/descEditText"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.501" />
</android.support.constraint.ConstraintLayout>
